force-app/main/default/objects/Loan__c/fields/Loan_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Date__c</fullName>
    <label>Loan Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>