force-app/main/default/objects/Loan__c/fields/Loan_Name__c.field-meta.xml
<CustomField>
    <fullName>Loan_Name__c</fullName>
    <formula>&quot;Loan for &quot; &amp; Book__r.Name &amp; &quot; by &quot; &amp; Member__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Name</label>
    <type>Text</type>
</CustomField>